# PLANIX

./: .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING_STRATEGY.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/apps/audit/: models.py
backend/app/apps/audit/migrations/: 0001_initial.py
backend/app/apps/authentication/: serializers.py  urls.py  views.py
backend/app/apps/authentication/tests/: test_auth_endpoints.py
backend/app/apps/dashboard/: services.py  views.py
backend/app/apps/dashboard/tests/: test_dashboard_endpoints.py  test_services.py
backend/app/apps/notifications/: models.py  serializers.py  services.py  views.py
backend/app/apps/notifications/migrations/: 0001_initial.py
backend/app/apps/notifications/tests/: test_notification_endpoints.py
backend/app/apps/roles/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/apps/roles/migrations/: 0001_initial.py
backend/app/apps/roles/tests/: test_role_endpoints.py
backend/app/apps/schedules/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/app/apps/schedules/migrations/: 0001_initial.py
backend/app/apps/users/: admin.py  models.py  serializers.py  views.py
backend/app/config/: settings.py  test_runner.py  urls.py
backend/app/shared/permissions/: role_permissions.py
backend/app/tests/: factories.py  test_e2e_api_flows.py  test_openapi.py
frontend/: Dockerfile  Dockerfile.prod  (+7 more)
(+127 files in other folders)
